--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server server.json --watch --port 3333"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -18,6 +19,7 @@
     "@tanstack/react-query": "^5.35.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "json-server": "^1.0.0-beta.0",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
